# openstates-geo

./: .dockerignore  .gitignore  .yamllint  Dockerfile  LICENSE  README.md  docker-compose.yml  generate-geo-data.py  get-all-sld-shapefiles.py  id-mappings.yml  join-ocd-division-ids.js  make-tiles.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.yml  shapefiles.yml  tox.ini  update-tiles.sh
.circleci/: config.yml
.github/worfklows/: lint.yml
.github/workflows/: ci.yml  deploy.yml
configs/: settings.yml
configs/jurisdictions/: ak.yml  al.yml  ar.yml  as.yml  az.yml  ca.yml  co.yml  ct.yml  dc.yml  de.yml  fl.yml  ga.yml  gu.yml  hi.yml  ia.yml  id.yml  il.yml  in.yml  ks.yml  ky.yml  la.yml  ma.yml  md.yml  me.yml  mi.yml  mn.yml  mo.yml  mp.yml  ms.yml  mt.yml  nc.yml  nd.yml  ne.yml  nh.yml  nj.yml  nm.yml  nv.yml  ny.yml  oh.yml  ok.yml  (+17 more)
data/: README
data/ocdids/: us_cd.csv  us_sldl.csv  us_sldu.csv
djapp/: asgi.py  settings.py  urls.py  wsgi.py
djapp/geo/: models.py
djapp/geo/management/commands/: clean_divisions.py  load_divisions.py
djapp/geo/migrations/: 0001_initial.py  0002_remove_division_created_at.py  0003_division_state.py
endpoint/: lookup.py  tripod.py  tripod.yaml
scripts/: bulk-boundary-files-upload.py  get-all-sld-shapefiles.py  get-shapefiles.py  join-ocd-division-ids.py  make-tiles.py  make-tiles.sh  mts-upload.py  settings.py  settings.yml  shapefiles.py  to-geojson.py  to-geojson.sh  update-boundaries.py  upload-bulk-boundary-files.py  utils.py
testing/: load-fake-division.sh
utils/: __init__.py  bulk.py  general.py  geojson.py  mapbox.py  tiger.py
