[tool.poetry]
name = "openstates-geo"
version = "2.0.0"
description = ""
authors = ["James Turk <dev@jamesturk.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.23.0"
django = "^3.2.11"
psycopg2-binary = "^2.9.2"
dj-database-url = "^0.5.0"
boto3 = "^1.26.69"
geopandas = "^0.13.2"
openstates = "^6.16.5"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
